--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,4 +1,4 @@
-header {position:relative;}
+header {position:relative; height: 7rem;}
 header>img { 
   width: 100%; height: 9rem;
   clip-path: polygon(0 0, 100% 0, 100% 100%, calc(100% - 3rem) calc(100% - 3rem), 0 calc(100% - 3rem));
@@ -10,8 +10,8 @@ h1 {
 }
 #intro {
   background-color: gray;
-  position: relative; bottom: 2rem;
-  width: auto; margin: 0 1rem 0rem; padding: .5rem;
+  /* position: relative; bottom: 2rem; */
+  width: auto; margin: 0 1rem 0; padding: .5rem;
   clip-path: polygon(0 0, calc(100% - 2.5rem) 0, 100% 2.5rem, 100% 100%, 0 100%);
 }
 #main-nav { 
@@ -20,11 +20,13 @@ h1 {
 }
 /* Tablet */
 @media screen and (min-width: 35rem) {
+  header {height: 8rem;}
   header>img { height: 10rem; }
   h1 {font-size: 2.5rem;}
 }
 /* Desktop */
 @media screen and (min-width: 55rem) {
+  header {height: 11rem;}
   header>img {
     height: 20rem;
     clip-path: polygon(0 0, 100% 0, 100% 100%, 75% 100%, calc(75% - 10rem) calc(100% - 10rem), 0 calc(100% - 10rem));
