--- a/src/css/sidenav.css
+++ b/src/css/sidenav.css
@@ -1,12 +1,15 @@
 #sidenav {
   height: 100vh; margin: 0 1rem 0;
 }
-#sidenav>ul, #sidenav li {
-  list-style-type: none;
-  padding: 0; margin: .5rem 0 0;
-  text-align: center;
+#sidenav>ul, #sidenav>li { margin: .5rem 0 0; padding: 0; text-align: center; }
+#sidenav>ul { display: flex; flex-direction: column; gap: .5rem; }
+#sidenav li>a {
+  width: 100%; height: 100%; display: block;
+  background-color: var(--dark-gray);
+  padding: .5rem 0; border-radius: 1rem;
+  color: var(--light-gray);
 }
-#sidenav li {margin: 1rem 0 0;}
+#sidenav li>a:hover {background-color: var(--gray);}
 #sidenav a>img {
   display: block; margin: 0 auto .25rem;
   image-rendering: pixelated;
